--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link id="brk-base-color" rel="stylesheet" href="css/skins/brk-base-color.css">
     <link rel="stylesheet" id="brk-direction-offsets" href="css/assets/offsets.css">
     <link id="brk-css-min" rel="stylesheet" href="css/assets/styles.min.css">
-    <link rel="stylesheet" href="vendor/revslider/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="vendor/revslider/fonts/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="vendor/revslider/css/settings.css">
+    <!-- <link rel="stylesheet" href="vendor/revslider/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="vendor/revslider/fonts/font-awesome/css/font-awesome.css"> -->
+    <!-- <link rel="stylesheet" href="vendor/revslider/css/settings.css"> -->
     <link rel="stylesheet" type="text/css" href="css/smile.css">
 </head>
 
@@ -98,117 +98,27 @@
         <div class="slider">
             <div class="slide current">
                 <div class="content">
-                    <div class="text-content">
-                        <div class="text">
-                            <span>S</span>
-                            <span>m</span>
-                            <span>i</span>
-                            <span>l</span>
-                            <span>e</span>
-                            <span>F</span>
-                            <span>o</span>
-                            <span>u</span>
-                            <span>n</span>
-                            <span>d</span>
-                            <span>a</span>
-                            <span>t</span>
-                            <span>i</span>
-                            <span>o</span>
-                            <span>n</span>
-                        </div>
-                    </div>
+                    <h1 class="ml2">Smile Foundation</h1>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <div class="text-content">
-                        <div class="text">
-                            <span>S</span>
-                            <span>m</span>
-                            <span>i</span>
-                            <span>l</span>
-                            <span>e</span>
-                            <span>F</span>
-                            <span>o</span>
-                            <span>u</span>
-                            <span>n</span>
-                            <span>d</span>
-                            <span>a</span>
-                            <span>t</span>
-                            <span>i</span>
-                            <span>o</span>
-                            <span>n</span>
-                        </div>
-                    </div>
+                    <h1 class="ml2">Smile Foundation</h1>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <div class="text-content">
-                        <div class="text">
-                            <span>S</span>
-                            <span>m</span>
-                            <span>i</span>
-                            <span>l</span>
-                            <span>e</span>
-                            <span>F</span>
-                            <span>o</span>
-                            <span>u</span>
-                            <span>n</span>
-                            <span>d</span>
-                            <span>a</span>
-                            <span>t</span>
-                            <span>i</span>
-                            <span>o</span>
-                            <span>n</span>
-                        </div>
-                    </div>
+                    <h1 class="ml2">Smile Foundation</h1>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                   <div class="text-content">
-                        <div class="text">
-                            <span>S</span>
-                            <span>m</span>
-                            <span>i</span>
-                            <span>l</span>
-                            <span>e</span>
-                            <span>F</span>
-                            <span>o</span>
-                            <span>u</span>
-                            <span>n</span>
-                            <span>d</span>
-                            <span>a</span>
-                            <span>t</span>
-                            <span>i</span>
-                            <span>o</span>
-                            <span>n</span>
-                        </div>
-                    </div>
+                   <h1 class="ml2">Smile Foundation</h1>
                 </div>
             </div>
             <div class="slide">
                 <div class="content">
-                    <div class="text-content">
-                        <div class="text">
-                            <span>S</span>
-                            <span>m</span>
-                            <span>i</span>
-                            <span>l</span>
-                            <span>e</span>
-                            <span>F</span>
-                            <span>o</span>
-                            <span>u</span>
-                            <span>n</span>
-                            <span>d</span>
-                            <span>a</span>
-                            <span>t</span>
-                            <span>i</span>
-                            <span>o</span>
-                            <span>n</span>
-                        </div>
-                    </div>
+                    <h1 class="ml2">Smile Foundation</h1>
                 </div>
             </div>
         </div>
@@ -449,13 +359,13 @@
                     <div class="brk-grid-fitrows__item brk-grid-fitrows__item_width-2">
                         <div class="brk-simple-card-2 brk-simple-card-2_minimal">
                             <div class="brk-simple-card-2__animation-wrapper" data-brk-library="component__portfolio_row,fancybox">
-                                <img class="brk-simple-card-2__img" src="img/demo_minimalistic_portfolio/21.JPG" alt="alt">
+                                <img class="brk-simple-card-2__img" src="img/demo_minimalistic_portfolio/21-min.JPG" alt="alt">
                                 <div class="brk-simple-card-2__overlay brk-base-bg-11"></div>
                                 <div class="brk-simple-card-2__info text-center">
                                     <a class="brk-simple-card-2__category text-white font__family-montserrat font__size-12 font__weight-bold line__height-12 text-uppercase letter-spacing-100">Equipment</a>
                                     <a class="brk-simple-card-2__title text-white font__family-roboto font__size-36 font__weight-ultralight line__height-38">Canon XF100 HD</a>
                                 </div>
-                                <a class="brk-simple-card-2__btn fancybox" href="img/demo_minimalistic_portfolio/21.JPG" data-fancybox="portfolio-rows-fancybox-group">
+                                <a class="brk-simple-card-2__btn fancybox" href="img/demo_minimalistic_portfolio/21-min.JPG" data-fancybox="portfolio-rows-fancybox-group">
                                     <i class="far fa-plus icon-inside" aria-hidden="true"></i>
                                 </a>
                             </div>
@@ -2433,65 +2343,15 @@
     <a href="#top" id="toTop"></a>
     <!-- <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script> -->
     <script src="js/scripts.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="js/smile.js"></script>
-    <script src="vendor/revslider/js/jquery.themepunch.tools.min.js"></script>
+   <!--  <script src="vendor/revslider/js/jquery.themepunch.tools.min.js"></script>
     <script src="vendor/revslider/js/jquery.themepunch.revolution.min.js"></script>
     <script type="text/javascript" src="vendor/revslider/js/extensions/revolution.extension.video.min.js"></script>
     <script type="text/javascript" src="vendor/revslider/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script type="text/javascript" src="vendor/revslider/js/extensions/revolution.extension.actions.min.js"></script>
-    <script type="text/javascript" src="vendor/revslider/js/extensions/revolution.extension.layeranimation.min.js"></script>
-    <script>
-    var revapi31,
-        tpj;
-    (function() {
-        if (!/loaded|interactive|complete/.test(document.readyState)) document.addEventListener("DOMContentLoaded", onLoad);
-        else onLoad();
-
-        function onLoad() {
-            if (tpj === undefined) {
-                tpj = jQuery;
-                if ("off" == "on") tpj.noConflict();
-            }
-            if (tpj("#rev_slider_31_1").revolution == undefined) {
-                revslider_showDoubleJqueryError("#rev_slider_31_1");
-            } else {
-                revapi31 = tpj("#rev_slider_31_1").show().revolution({
-                    sliderType: "standard",
-                    jsFileLocation: "vendor/revslider/js/",
-                    sliderLayout: "fullwidth",
-                    dottedOverlay: "none",
-                    delay: 6000,
-                    navigation: {
-                        onHoverStop: "off",
-                    },
-                    responsiveLevels: [1240, 1024, 778, 480],
-                    visibilityLevels: [1240, 1024, 778, 480],
-                    gridwidth: [1600, 1366, 768, 576],
-                    gridheight: [720, 720, 960, 720],
-                    lazyType: "none",
-                    minHeight: "720",
-                    shadow: 0,
-                    spinner: "spinner0",
-                    stopLoop: "off",
-                    stopAfterLoops: -1,
-                    stopAtSlide: -1,
-                    shuffle: "off",
-                    autoHeight: "off",
-                    hideThumbsOnMobile: "off",
-                    hideSliderAtLimit: 0,
-                    hideCaptionAtLimit: 0,
-                    hideAllCaptionAtLilmit: 0,
-                    debugMode: false,
-                    fallbacks: {
-                        simplifyAll: "off",
-                        nextSlideOnWindowFocus: "off",
-                        disableFocusListener: false,
-                    }
-                });
-            }; /* END OF revapi call */
-        }; /* END OF ON LOAD FUNCTION */
-    }()); /* END OF WRAPPING FUNCTION */
-    </script>
+    <script type="text/javascript" src="vendor/revslider/js/extensions/revolution.extension.layeranimation.min.js"></script> -->
+    
 </body>
 
 </html>
